switch to minified version

--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tobias Anhalt</title>
-
-	<!--<link href="build/css.css" rel="stylesheet">-->
-	<link href="css/lib/bootstrap.min.css" rel="stylesheet">
-	<link href="css/lib/animate.css" rel="stylesheet">
-	<link href="css/screen.css" rel="stylesheet">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+	<link rel="stylesheet" href="build/css.css" rel="stylesheet">
+	<!--
+	<link rel="stylesheet" href="css/lib/animate.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/screen.css" rel="stylesheet">
+	-->
 </head>
 <body>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="build/js.js"></script>
 
-	<!--<script type="text/javascript" src="build/js.js"></script>-->
-
+	<!--
 	<script type="text/javascript" src="js/lib/handlebars.runtime-v1.3.0.js"></script>
 	<script type="text/javascript" src="js/lib/moment.js"></script>
 	<script type="text/javascript" src="build/template.js"></script>
 	<script type="text/javascript" src="js/data.js"></script>
 	<script type="text/javascript" src="js/application.js"></script>
 	<script type="text/javascript" src="js/githubFormatter.js"></script>
+	-->
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="build/compatibility.js"></script>
